# ustb-cli-c

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  aarch64-openwrt-toolchain.cmake  aarch64-toolchain.cmake  armhf-toolchain.cmake  config.h.in
.github/workflows/: build.yml
lib/: decode.c  decode.h  gbuff.c  gbuff.h  gstr.c  gstr.h  hash.h  md5.c
src/: cmd.h  conf.h  gstr.c  gstr.h  terminal.h  text.c  text.h
src/calc/: fee.c  fee.h  flow.c  flow.h  timer.c  timer.h
src/cmd/: account.c  balance.c  cmd.c  completion.c  speedtest.c
src/net/: cookiejar.c  http.c  http.h  socket.c  socket.h  tcp.c  tcp.h
tests/: CMakeLists.txt  cargs.h  config.h  test_commands.c  test_commands.h  test_formats.c  test_http.c  test_runner.sh
tests/assets/: cippv6_get_ip.txt  login_normal.txt  long_cookie.txt
tests/cmd/: test_balance.c
tests/mock/: alloc.c  gbuff.c  mem.c  mem.h  tcp.c
tests/redirect/: redirect_stdout.c  redirect_stdout.h
